#8 Achieve 100% code coverage on backend